# BattleshipGame

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/: game_logic.py  main.py
src/elements/: autoships.py  constants.py
src/graphics/: button.py  drawing.py  manual_ships.py
src/media/: icon.icns
src/tests/: test_game_logic.py
