[tool.poetry]
name = "battleshipgame"
version = "0.1.0"
description = ""
authors = ["Kostiantyn Perun <kosperun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"

[tool.poetry.group.dev.dependencies]
perflint = "^0.8.1"
ipython = "^8.39.0"
black = "^26.3.1"
pre-commit = "^4.6.0"
pylint = "^3.3.0"
pytest = "^8.3.5"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
